fix text alignment in item cards

--- a/homepage/static/css/style.css
+++ b/homepage/static/css/style.css
@@ -19,6 +19,7 @@
     transition: all .2s;
     display: inline-block;
     vertical-align: middle;
+    text-align: left;
     border-radius: 8%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     height: 300px;
